--- a/build.gradle
+++ b/build.gradle
@@ -15,3 +15,12 @@ jar {
     baseName = 'parking-lot'
     version = '0.1.0'
 }
+
+
+dependencies {
+    testCompile(
+            'junit:junit:4.12',
+            'org.codehaus.groovy:groovy-all:2.4.4',
+            'org.spockframework:spock-core:1.0-groovy-2.4'
+    )
+}
